--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
+    "cross-env": "7.0.3",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -31,20 +32,20 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
+    "prestart": "cross-env NODE_OPTIONS=--openssl-legacy-provider",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix",
-    "prestart": "set NODE_OPTIONS=--openssl-legacy-provider"
+    "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
     "*.js": [
       "npm run lint:fix"
     ],
-    "*.{js, jsx, json, html, css}": [
+    "*.{js,jsx,json,html,css}": [
       "npm run format"
     ]
   },
