--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nxt-trendz-cart-features",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "engines": {
-    "node": ">=16",
+    "node": "18.x",
     "npm": ">=8"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "cross-env": "7.0.3",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -38,16 +39,12 @@
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
-    "format": "prettier --write \"./src\"",
+    "format": "prettier --write \"src\"",
     "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
-    "*.js": [
-      "npm run lint:fix"
-    ],
-    "*.{js,jsx,json,html,css}": [
-      "npm run format"
-    ]
+    "*.js": ["npm run lint:fix"],
+    "*.{js,jsx,json,html,css}": ["npm run format"]
   },
   "husky": {
     "hooks": {
@@ -55,9 +52,7 @@
     }
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ]
+    "collectCoverageFrom": ["src/**/*.js"]
   },
   "browserslist": {
     "development": [
