--- a/package.json
+++ b/package.json
@@ -36,11 +36,7 @@
     "prestart": "cross-env NODE_OPTIONS=--openssl-legacy-provider",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix src/",
-    "format": "prettier --write \"src\"",
-    "run-all": "npm-run-all --parallel test lint:fix"
+    "test": "react-scripts test"
   },
   "lint-staged": {
     "*.js": ["npm run lint:fix"],
