--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nxt-trendz-cart-features",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "engines": {
-    "node": "16.x",
-    "npm": ">=8"
+    "node": ">=16",
+  "npm": ">=8"
   },
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
@@ -21,8 +21,6 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "cross-env": "7.0.3",
-    "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -33,14 +31,21 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "prestart": "cross-env NODE_OPTIONS=--openssl-legacy-provider",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix src/",
+    "format": "prettier --write \"./src\"",
+    "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
-    "*.js": ["npm run lint:fix"],
-    "*.{js,jsx,json,html,css}": ["npm run format"]
+    "*.js": [
+      "npm run lint:fix"
+    ],
+    "*.{js, jsx, json, html, css}": [
+      "npm run format"
+    ]
   },
   "husky": {
     "hooks": {
@@ -48,7 +53,9 @@
     }
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.js"]
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
   },
   "browserslist": {
     "development": [
