--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.26.8",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint": "8.57.1",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.1.0",
     "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
@@ -45,7 +50,7 @@
     "*.js": [
       "npm run lint:fix"
     ],
-    "*.{js, jsx, json, html, css}": [
+    "*.{js,jsx,json,html,css}": [
       "npm run format"
     ]
   },
