--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.26.8",
-    "eslint": "8.57.1",
-    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.1.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-import": "2.28.1",
@@ -35,11 +33,11 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
